--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="zh">
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>zsui</title>
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Color theme for statusbar -->
+    <meta name="theme-color" content="#e91e63">
+    <!--link rel="icon" href="<%= BASE_URL %>favicon.ico"-->
+    <title>转糖App</title>
+    <!-- Path to Framework7 Library CSS -->
+    <!--link rel="stylesheet" href="./main.css"-->
+</head>
+
+<body>
     <noscript>
-      <strong>We're sorry but zsui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        <strong>We're sorry but zsui doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
